--- a/scripts/environment.yml
+++ b/scripts/environment.yml
@@ -17,5 +17,6 @@ dependencies:
       - google-auth
       - google-auth-httplib2
       - GitPython #optional but required in my new version of the app
+      - lxml
 
 
