--- a/scripts/environment.yml
+++ b/scripts/environment.yml
@@ -18,5 +18,6 @@ dependencies:
       - google-auth-httplib2
       - GitPython #optional but required in my new version of the app
       - lxml
+      - lightgbm
 
 
